# gnu_pyconfigure

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  pyconf.in  pyconf.py
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: Makefile  Makefile.in  gsrc.info  pyconfigure.info  pyconfigure.texi  python-configure.info  python-configure.texi  python-configure.texi~  stamp-vti  version.texi
doc/manual/: python-configure.info
examples/bzr/: Makefile.in  configure.ac
examples/mediagoblin/: Makefile.in  configure.ac
examples/mediagoblin/mediagoblin-0.3.1/: Makefile.in
m4/: python.m4
src/: Makefile  Makefile.in  Makefile.in.distutils  Makefile.in.make  PKG-INFO.in  aclocal.m4  configure  configure.ac  setup.py.in  setup.py.in.distutils  setup.py.in.make
src/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
src/m4/: python.m4
